force-app/main/default/objects/QuestionnaireAnswer__c/QuestionnaireAnswer__c.object-meta.xml
<CustomObject>
    <label>QuestionnaireAnswers</label>
    <nameField>
        <label>QuestionnaireAnswers Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>