force-app/main/default/objects/QuestionnaireAnswer__c/fields/AnswerLabel__c.field-meta.xml
<CustomField>
    <fullName>AnswerLabel__c</fullName>
    <label>AnswerLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>