force-app/main/default/objects/QuestionnaireAnswer__c/fields/QuestionnaireQuestion__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>QuestionnaireQuestion</label>
    <referenceTo>QuestionnaireQuestion__c</referenceTo>
    <relationshipLabel>QuestionnaireAnswer</relationshipLabel>
    <relationshipName>QuestionnaireAnswer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>